fix problem on mobile related with layers

--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,6 @@ body {
     height: 400px;
     border-radius: 5px;
     border: 5px solid rgb(156, 138, 124);
-    
     z-index: 10;
 }
 #canvas {
@@ -113,6 +112,14 @@ body {
     }
     .score-container {
 	top: 15%;
+    }
+    #animation {
+	width: 300px;
+	height: 300px;
+    }
+    .game-container {
+	width: 300px;
+	height: 300px;
     }
     #canvas {
 	width: 300px;
